--- a/static/css/stars.css
+++ b/static/css/stars.css
@@ -11,9 +11,9 @@
 .dot {
     opacity: 0;
     position: absolute;
-    z-index: 1;
-    aspect-ratio: 1;
-    border-radius: 50%;
+    z-index: 0;
+    aspect-ratio: 1 / 1 !important;
+    border-radius: 50% !important;
     background-color: rgba(255, 255, 255, 0.76);
 }
 
